# nw-network

./: Cargo.toml  README.md  build.rs
benches/: replicated_state.rs
codegen/: generated-states.json  network-field-overrides.json
crates/nw-network-derive/: Cargo.toml
crates/nw-network-derive/src/: attrs.rs  az_rtti.rs  chunk_marshaler.rs  error.rs  fixed_replicated_state_fields.rs  fragment.rs  generics.rs  lib.rs  marshal.rs  marshaler.rs  replicated_state.rs  state_storage.rs  type_registry.rs  unmarshal.rs
crates/nw-network-types/: Cargo.toml  build.rs
crates/nw-network-types/codegen/: message-signatures.json  selection.json
crates/nw-network-types/src/: ext.rs  lib.rs
src/: generated.rs  generated_conversions.rs  generated_messages.rs  generated_states.rs  lib.rs  types.rs  validation.rs
src/hub/: address.rs  fixed_replicated_state.rs  fragment.rs  ids.rs  macros.rs  mod.rs  replicated_state.rs  replicated_state_bundle.rs  sequence_number.rs  state_bundle_builder.rs  state_bundle_view.rs
src/messages/: mod.rs  registration.rs
src/serialize/: buffer.rs  compression_marshal.rs  container_marshal.rs  data_marshal.rs  error.rs  flat_bitmask.rs  live_mask.rs  marshaler.rs  mask_chain.rs  math_marshal.rs  mod.rs  quantize.rs  replicated_container.rs  replicated_field.rs  utility_marshal.rs  vlq.rs
src/states/: alc.rs  base.rs  mod.rs
src/states/activities/: game_mode.rs  game_mode_mutation_scheduler.rs  game_mode_participant.rs  mod.rs  musical_performance.rs  musical_performance_player.rs
src/states/character/: look_targeting.rs  mod.rs  mount.rs  player.rs  player_appearance.rs  player_arena.rs
src/states/combat/: ability.rs  ability_instance_tracking.rs  attribute.rs  beam_attack.rs  boss_phase.rs  charge.rs  combat_status.rs  cooldown_timers.rs  damage_receiver.rs  grit.rs  mana.rs  mod.rs  projectile.rs  projectile_spawner.rs  reaction_tracking.rs  spell.rs  stamina.rs  stat_multiplier_table.rs  status_effect.rs  vitals.rs
src/states/economy/: aggregate_contract_count.rs  contribution.rs  mod.rs  tipping_pool.rs
src/states/ftue/: detection_volume_teleport.rs  island.rs  mod.rs
src/states/gathering/: component.rs  fishing.rs  gatherable_controller.rs  mod.rs
src/states/housing/: buildable_controller.rs  buildable_grid.rs  builder.rs  camping.rs  house_data.rs  mod.rs  placement_obstruction.rs  player_home.rs
src/states/interaction/: delayed_event.rs  detection_volume_event.rs  door.rs  event_timeline.rs  interact_with_item_cost.rs  interactor.rs  mod.rs  trigger_area_entity.rs
src/states/inventory/: container.rs  crafting.rs  currency.rs  item_descriptor.rs  item_generation.rs  item_management.rs  item_skinning.rs  mod.rs  (+5 more)
tests/: live_capture_state_bundle.rs  network_schema.rs
(+45 files in other folders)
