[package]
name = "nw-network"
version = "0.1.0"
edition = "2024"
description = "Packet serialization and New World network type ports."
license = "MIT OR Apache-2.0"
repository = "https://github.com/themixednuts/nw-network"
readme = "README.md"
keywords = ["network", "protocol", "serialization"]

[workspace]
members = ["crates/nw-network-derive", "crates/nw-network-types"]
resolver = "3"

[dependencies]
arrayvec = "0.7.7"
bevy_math = "0.18"
derive_more = { version = "2", features = ["as_ref", "deref", "deref_mut", "display", "from", "into"] }
glam = "0.30"
half = "2.7"
indexmap = "2"
inventory = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
nw-network-types = { path = "crates/nw-network-types" }
nw-network-derive = { path = "crates/nw-network-derive" }

[build-dependencies]
anyhow = "1"
blake3 = "1"
nw-serialize-codegen = { git = "https://github.com/themixednuts/nw-tools.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.8.2"
serde_json = "1"

[[bench]]
name = "replicated_state"
harness = false
