[package]
name = "nw-network-types"
version = "0.1.0"
edition = "2024"
description = "Generated data types used by nw-network."
license = "MIT OR Apache-2.0"
repository = "https://github.com/themixednuts/nw-network"

[dependencies]
bevy_app = "0.18"
bevy_ecs = { version = "0.18", features = ["serialize"] }
bevy_color = { version = "0.18", features = ["serialize"] }
bevy_math = { version = "0.18", features = ["serialize"] }
bevy_reflect = { version = "0.18", features = ["smallvec", "uuid"] }
bevy_transform = { version = "0.18", features = ["serialize"] }
sha1 = "0.11"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1", features = ["serde"] }
uuid = { version = "1.23", features = ["serde", "v4", "v7"] }

[build-dependencies]
anyhow = "1"
blake3 = "1"
nw-resources = { git = "https://github.com/themixednuts/nw-tools.git", rev = "10c597dc9cb6594d6295cbe7f4db471841ba2358" }
nw-serialize-codegen = { git = "https://github.com/themixednuts/nw-tools.git", rev = "10c597dc9cb6594d6295cbe7f4db471841ba2358" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
